统一任务与工作流生命周期 / Project workflows from task state
将 Forge 1.20.1 的放置与挖掘工作流改为由 TaskRecord 单向投影暂停、等待和终态，并让 UI 操作先修改真实任务。同步把迁入的测试放回整理后的 unit/contract 源集。

Adapt the unified task/workflow lifecycle to the Forge mining architecture, where area destruction is handled by the mining processor instead of a separate destruction batch. Also place the ported tests in the organized unit/contract source sets.